# CTAS

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
docs/: schema.md
examples/: ideal-sync-rectifier-behavioral.json  ideal-voltage-mode-pwm-behavioral.json  tlv75733p-ldo.json  ucc21520-isolated-gate-driver.json  ucc256301-llc-resonant.json
schemas/: CTAS.json  controller.json  inputs.json  outputs.json  utils.json
schemas/inputs/: designRequirements.json
scripts/: validate.py
src/: CtasConverter.cpp  CtasConverter.hpp
tests/: test_ctas.cpp
